--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "console log colors",
     "colorify logs"
   ],
-  "author": "HV",
+  "author": "herry_vaghasiya <herryvaghasiya@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/HerryVaghasiya/colorify/issues"
