--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "colorify logs"
   ],
   "author": "herry_vaghasiya <herryvaghasiya@gmail.com>",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/HerryVaghasiya/colorify/issues"
   },
