--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "colorify",
-  "version": "1.0.0",
+  "name": "herrycolorify",
+  "version": "1.0.1",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
