--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "herrycolorify",
+  "name": "herry_sum_function",
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
